--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pharmamate",
-  "version": "0.1.6.6",
+  "version": "0.1.6.7",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "react": "19.2.3",
